--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = ["contracts/*"]
 
-[profile.release.package.infinity-pools]
+[profile.release.package.infinity-pool]
 codegen-units = 1
 incremental = false
 
