Progress on pool_tests

--- a/contracts/infinity-pool/Cargo.toml
+++ b/contracts/infinity-pool/Cargo.toml
@@ -49,6 +49,7 @@ sg-marketplace = { git = "https://github.com/public-awesome/marketplace" }
 cw-multi-test = { version = "0.16.0" }
 sg-multi-test = "0.21.8"
 test-suite = "0.21.8"
+vending-minter = { version = "0.21.8"}
 
 
 # [dependencies]
