--- a/contracts/infinity-pool/Cargo.toml
+++ b/contracts/infinity-pool/Cargo.toml
@@ -43,6 +43,8 @@ sg721-base = { version = "0.21.8", features = ["library"] }
 sg721 = { version = "0.21.8", features = ["library"] }
 sg-std = "0.21.8"
 sg-marketplace = { git = "https://github.com/public-awesome/marketplace", features = ["library"] }
+cw721-base = { version = "0.16.0", features = ["library"] }
+cw721 = "0.16.0"
 
 
 [dev-dependencies]
@@ -59,7 +61,6 @@ vending-factory = { version = "0.21.8"}
 # cw-storage-plus = "0.16.0"
 # cw2 = "0.16.0"
 # cw20 = "0.16.0"
-# cw721 = "0.16.0"
 # cw721-base = { version = "0.16.0", features = ["library"] }
 # schemars =  "0.8.11"
 # serde = { version =  "1.0.145", default-features = false, features = ["derive"] }
