Finish pool_tests.rs

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GAS_OUT_DIR: gas_reports
-      ENABLE_MAX_COLLECTION: true
+      ENABLE_LARGE_TESTS: false
       GAS_LIMIT: 75000000
     steps:
       - name: Checkout sources
