--- a/.cargo/config
+++ b/.cargo/config
@@ -3,4 +3,4 @@ wasm = "build --release --target wasm32-unknown-unknown"
 wasm-debug = "build --target wasm32-unknown-unknown"
 unit-test = "test --lib"
 schema = "run --example schema"
-integration-test = "test --package e2e -- --ignored --test-threads 1 -Z unstable-options --report-time"
+integration-test = "test --package e2e-tests -- --ignored --test-threads 1 -Z unstable-options --report-time"
