--- a/contracts/infinity-pool/Cargo.toml
+++ b/contracts/infinity-pool/Cargo.toml
@@ -28,66 +28,20 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 """
 
 [dependencies]
-cosmwasm-std = "1.1.9"
-cosmwasm-schema = { version = "1.1.9" }
-cosmwasm-storage = { version = "1.0.0" }
-cw-storage-plus = "0.16.0"
-cw-utils = "0.16.0"
-cw2 = "0.16.0"
-thiserror = { version = "1.0.31" }
-anyhow = "1.0.51"
-sg1 = "0.21.8"
-sg2 = "0.21.8"
-sg721-base = { version = "0.21.8", features = ["library"] }
-sg721 = { version = "0.21.8", features = ["library"] }
-sg-std = "0.21.8"
-sg-marketplace = { git = "https://github.com/public-awesome/marketplace", features = ["library"] }
-cw721-base = { version = "0.16.0", features = ["library"] }
-cw721 = "0.16.0"
-itertools = "0.10.5"
+cosmwasm-std = { workspace = true }
+cosmwasm-schema = { workspace = true }
+cosmwasm-storage = { workspace = true }
+cw-storage-plus = { workspace = true }
+cw-utils = { workspace = true }
+cw2 = { workspace = true }
+thiserror = { workspace = true }
+anyhow = { workspace = true }
+sg1 = { workspace = true }
+sg2 = { workspace = true }
+sg721-base = { workspace = true }
+sg721 = { workspace = true }
+sg-std = { workspace = true }
+sg-marketplace = { workspace = true }
+cw721-base = { workspace = true }
+cw721 = { workspace = true }
 
-
-[dev-dependencies]
-cw-multi-test = { version = "0.16.0" }
-sg-multi-test = "0.21.8"
-test-suite = "0.21.8"
-vending-minter = { version = "0.21.8"}
-vending-factory = { version = "0.21.8"}
-
-
-# [dependencies]
-# cosmwasm-std = "1.1.5"
-# cosmwasm-storage = { version = "1.0.0" }
-# cw-storage-plus = "0.16.0"
-# cw2 = "0.16.0"
-# cw20 = "0.16.0"
-# cw721-base = { version = "0.16.0", features = ["library"] }
-# schemars =  "0.8.11"
-# serde = { version =  "1.0.145", default-features = false, features = ["derive"] }
-# sg721-base = { version = "0.21.8", features = ["library"] }
-# sg721 = { version = "0.21.8", features = ["library"] }
-# thiserror = { version = "1.0.31" }
-# sg-std = "0.21.8"
-# cw-utils = "0.16.0"
-# sg1 = "0.21.8"
-# sg2 = "0.21.8"
-# sg-controllers = "0.21.8"
-# semver = "1"
-# cosmwasm-schema = { version = "1.1.5" }
-
-# [dev-dependencies]
-# cute = "0.3.0"
-# vending-factory = { version = "0.21.8"}
-# vending-minter = { version = "0.21.8"}
-# cw-multi-test = { version = "0.16.0" }
-# sg-multi-test = "0.21.8"
-# base-minter = "0.21.8"
-# test-suite = "0.21.8"
- 
-# [profile.release]
-# rpath = false
-# lto = true
-# overflow-checks = true
-# opt-level = 3
-# debug = false
-# debug-assertions = false
