--- a/contracts/infinity-swap/Cargo.toml
+++ b/contracts/infinity-swap/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "infinity-pool"
+name = "infinity-swap"
 version    = { workspace = true }
 edition    = { workspace = true }
 repository = { workspace = true }
