--- a/test/e2e/Cargo.toml
+++ b/test/e2e/Cargo.toml
@@ -6,7 +6,7 @@ repository = { workspace = true }
 license    = { workspace = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-infinity-pool = { path = "../../contracts/infinity-pool" }
+infinity-swap = { path = "../../contracts/infinity-swap" }
 sg-marketplace = { git = "https://github.com/public-awesome/marketplace", features = ["library"] }
 cosmwasm-std = { workspace = true }
 cw-utils = { workspace = true }
