--- a/test/unit/Cargo.toml
+++ b/test/unit/Cargo.toml
@@ -6,7 +6,7 @@ repository = { workspace = true }
 license    = { workspace = true }
 
 [dependencies]
-infinity-pool = { path = "../../contracts/infinity-pool" }
+infinity-swap = { path = "../../contracts/infinity-swap" }
 cosmwasm-std = { workspace = true }
 cosmwasm-schema = { workspace = true }
 cosmwasm-storage = { workspace = true }
