--- a/contracts/infinity-marketplace-adapter/Cargo.toml
+++ b/contracts/infinity-marketplace-adapter/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "infinity-marketplace-wrapper"
+name = "infinity-marketplace-adapter"
 version    = { workspace = true }
 edition    = { workspace = true }
 repository = { workspace = true }
@@ -22,7 +22,7 @@ library = []
 
 [dependencies]
 infinity-macros = { workspace = true }
-infinity-interface = { workspace = true }
+infinity-shared = { workspace = true }
 infinity-swap = { workspace = true }
 cosmwasm-std = { workspace = true }
 cosmwasm-schema = { workspace = true }
@@ -38,5 +38,6 @@ sg721-base = { workspace = true }
 sg721 = { workspace = true }
 sg-std = { workspace = true }
 sg-marketplace = { workspace = true }
+sg-marketplace-common = { workspace = true }
 cw721-base = { workspace = true }
 cw721 = { workspace = true }
