--- a/test/e2e/Cargo.toml
+++ b/test/e2e/Cargo.toml
@@ -25,6 +25,6 @@ test-context   = "0.1.4"
 once_cell      = "1.13.0"
 serde          = { version = "1.0", default-features = false, features = ["derive"] }
 rand           = "0.8"
-base-minter = { version = "0.21.8"}
-base-factory = { version = "0.21.8"}
+base-minter = "2.1.0"
+base-factory = "2.1.0"
 itertools = "0.10.5"
