--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ workflows:
 jobs:
   contract_infinity_swap:
     docker:
-      - image: rust:1.66.1
+      - image: rust:1.68.2
     working_directory: ~/project/contracts/infinity-swap
     steps:
       - checkout:
@@ -28,12 +28,12 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - cargocache-infinity-swap-rust:1.66.1-{{ checksum "~/project/Cargo.lock" }}
+            - cargocache-infinity-swap-rust:1.68.2-{{ checksum "~/project/Cargo.lock" }}
       - run:
           name: Unit Tests
           environment:
             RUST_BACKTRACE: 1
-          command: cargo unit-test --locked
+          command: cargo unit-test
       - run:
           name: Build and run schema generator
           command: cargo schema --locked
@@ -50,11 +50,11 @@ jobs:
           paths:
             - /usr/local/cargo/registry
             - target
-          key: cargocache-infinity-swap-rust:1.66.1-{{ checksum "~/project/Cargo.lock" }}
+          key: cargocache-infinity-swap-rust:1.68.2-{{ checksum "~/project/Cargo.lock" }}
 
   lint:
     docker:
-      - image: rust:1.66.1
+      - image: rust:1.68.2
     steps:
       - checkout
       - run:
@@ -62,7 +62,7 @@ jobs:
           command: rustc --version; cargo --version; rustup --version; rustup target list --installed
       - restore_cache:
           keys:
-            - cargocache-v2-lint-rust:1.66.1-{{ checksum "Cargo.lock" }}
+            - cargocache-v2-lint-rust:1.68.2-{{ checksum "Cargo.lock" }}
       - run:
           name: Add rustfmt component
           command: rustup component add rustfmt
@@ -81,7 +81,7 @@ jobs:
             - target/debug/.fingerprint
             - target/debug/build
             - target/debug/deps
-          key: cargocache-v2-lint-rust:1.66.1-{{ checksum "Cargo.lock" }}
+          key: cargocache-v2-lint-rust:1.68.2-{{ checksum "Cargo.lock" }}
 
   # This runs one time on the top level to ensure all contracts compile properly into wasm.
   # We don't run the wasm build per contract build, and then reuse a lot of the same dependencies, so this speeds up CI time
@@ -89,7 +89,7 @@ jobs:
   # We also sanity-check the resultant wasm files.
   wasm-build:
     docker:
-      - image: rust:1.66.1
+      - image: rust:1.68.2
     steps:
       - checkout:
           path: ~/project
@@ -98,7 +98,7 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - cargocache-wasm-rust:1.66.1-{{ checksum "~/project/Cargo.lock" }}
+            - cargocache-wasm-rust:1.68.2-{{ checksum "~/project/Cargo.lock" }}
       - run:
           name: Add wasm32 target
           command: rustup target add wasm32-unknown-unknown
@@ -118,7 +118,7 @@ jobs:
           paths:
             - /usr/local/cargo/registry
             - target
-          key: cargocache-wasm-rust:1.66.1-{{ checksum "~/project/Cargo.lock" }}
+          key: cargocache-wasm-rust:1.68.2-{{ checksum "~/project/Cargo.lock" }}
       - run:
           name: Check wasm contracts
           command: |
