--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,9 +40,20 @@ itertools       = "0.10.5"
 cw-multi-test   = "0.16.0"
 sg-multi-test   = "2.1.0"
 test-suite      = "2.1.0"
+base-minter     = "2.1.0"
+base-factory    = "2.1.0"
 vending-minter  = "2.1.0"
 vending-factory = "2.1.0"
 mockall         = "0.11.4"
+cosm-orc        = { version = "3.0.1" }
+cosm-tome       = { version = "0.1.1" }
+assert_matches  = "1.5"
+serde           = { version = "1.0", default-features = false, features = ["derive"] }
+serde_json      = "1.0"
+env_logger      = "0.9.0"
+test-context    = "0.1.4"
+once_cell       = "1.13.0"
+rand            = "0.8"
 
 [profile.release.package.infinity-swap]
 codegen-units = 1
