--- a/contracts/infinity-swap/Cargo.toml
+++ b/contracts/infinity-swap/Cargo.toml
@@ -21,10 +21,13 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
+infinity-macros = { workspace = true }
+infinity-shared = { workspace = true }
 cosmwasm-std = { workspace = true }
 cosmwasm-schema = { workspace = true }
 cosmwasm-storage = { workspace = true }
 cw-storage-plus = { workspace = true }
+cw-storage-macro = { workspace = true }
 cw-utils = { workspace = true }
 cw2 = { workspace = true }
 thiserror = { workspace = true }
@@ -35,6 +38,7 @@ sg721-base = { workspace = true }
 sg721 = { workspace = true }
 sg-std = { workspace = true }
 sg-marketplace = { workspace = true }
+sg-marketplace-common = { workspace = true }
 cw721-base = { workspace = true }
 cw721 = { workspace = true }
 
