--- a/packages/infinity-shared/Cargo.toml
+++ b/packages/infinity-shared/Cargo.toml
@@ -21,7 +21,6 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-infinity-swap = { workspace = true }
 cosmwasm-std = { workspace = true }
 cosmwasm-schema = { workspace = true }
 cosmwasm-storage = { workspace = true }
@@ -36,5 +35,6 @@ sg721-base = { workspace = true }
 sg721 = { workspace = true }
 sg-std = { workspace = true }
 sg-marketplace = { workspace = true }
+sg-marketplace-common = { workspace = true }
 cw721-base = { workspace = true }
 cw721 = { workspace = true }
