--- a/test/unit/Cargo.toml
+++ b/test/unit/Cargo.toml
@@ -26,6 +26,7 @@ sg721-base = { workspace = true }
 sg721 = { workspace = true }
 sg-std = { workspace = true }
 sg-marketplace = { workspace = true }
+sg-marketplace-common = { workspace = true }
 cw721-base = { workspace = true }
 cw721 = { workspace = true }
 
