--- a/test/unit/Cargo.toml
+++ b/test/unit/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name       = "unit-tests"
-version    = { workspace = true }
-edition    = { workspace = true }
+name = "unit-tests"
+version = { workspace = true }
+edition = { workspace = true }
 repository = { workspace = true }
-license    = { workspace = true }
+license = { workspace = true }
 
 [dependencies]
+infinity-global = { workspace = true }
 infinity-pool = { workspace = true }
 infinity-index = { workspace = true }
 infinity-router = { workspace = true }
@@ -32,10 +33,10 @@ cw721 = { workspace = true }
 
 
 [dev-dependencies]
-itertools  = { workspace = true }
-cw-multi-test    = { workspace = true }
-sg-multi-test    = { workspace = true }
-test-suite       = { workspace = true }
-vending-minter   = { workspace = true }
-vending-factory  = { workspace = true }
-mockall          = { workspace = true }
+itertools = { workspace = true }
+cw-multi-test = { workspace = true }
+sg-multi-test = { workspace = true }
+test-suite = { workspace = true }
+vending-minter = { workspace = true }
+vending-factory = { workspace = true }
+mockall = { workspace = true }
