Finish first draft of infinity-index

--- a/contracts/infinity-index/Cargo.toml
+++ b/contracts/infinity-index/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "infinity-index"
-version    = { workspace = true }
-edition    = { workspace = true }
+version = { workspace = true }
+edition = { workspace = true }
 repository = { workspace = true }
-license    = { workspace = true }
+license = { workspace = true }
 
 exclude = [
   # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
@@ -22,7 +22,8 @@ library = []
 
 [dependencies]
 # infinity-macros = { workspace = true }
-# infinity-shared = { workspace = true }
+infinity-shared = { workspace = true }
+infinity-global = { workspace = true }
 # infinity-swap = { workspace = true }
 # infinity-pool = { workspace = true }
 cosmwasm-std = { workspace = true }
