--- a/contracts/infinity-pool/Cargo.toml
+++ b/contracts/infinity-pool/Cargo.toml
@@ -34,10 +34,10 @@ cw-utils = { workspace = true }
 cw2 = { workspace = true }
 thiserror = { workspace = true }
 # anyhow = { workspace = true }
-# sg1 = { workspace = true }
+sg1 = { workspace = true }
 # sg2 = { workspace = true }
 # sg721-base = { workspace = true }
-# sg721 = { workspace = true }
+sg721 = { workspace = true }
 sg-std = { workspace = true }
 # sg-marketplace = { workspace = true }
 sg-marketplace-common = { workspace = true }
