--- a/contracts/infinity-router/Cargo.toml
+++ b/contracts/infinity-router/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "infinity-router"
-version    = { workspace = true }
-edition    = { workspace = true }
+version = { workspace = true }
+edition = { workspace = true }
 repository = { workspace = true }
-license    = { workspace = true }
+license = { workspace = true }
 
 exclude = [
   # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
@@ -31,7 +31,7 @@ cosmwasm-schema = { workspace = true }
 cw-storage-plus = { workspace = true }
 cw-storage-macro = { workspace = true }
 # cosmwasm-storage = { workspace = true }
-# cw-utils = { workspace = true }
+cw-utils = { workspace = true }
 cw2 = { workspace = true }
 thiserror = { workspace = true }
 # anyhow = { workspace = true }
@@ -40,8 +40,8 @@ thiserror = { workspace = true }
 # sg721-base = { workspace = true }
 # sg721 = { workspace = true }
 sg-std = { workspace = true }
-# sg-marketplace = { workspace = true }
+sg-marketplace = { workspace = true }
 sg-marketplace-common = { workspace = true }
 sha2 = { workspace = true }
-# cw721-base = { workspace = true }
+cw721-base = { workspace = true }
 cw721 = { workspace = true }
