--- a/contracts/infinity-global/Cargo.toml
+++ b/contracts/infinity-global/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "infinity-global"
+name       = "infinity-global"
 version    = { workspace = true }
 edition    = { workspace = true }
 repository = { workspace = true }
@@ -21,10 +21,11 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cosmwasm-std = { workspace = true }
+cosmwasm-std    = { workspace = true }
 cosmwasm-schema = { workspace = true }
 cw-storage-plus = { workspace = true }
-cw-utils = { workspace = true }
-cw2 = { workspace = true }
-sg-std = { workspace = true }
-thiserror = { workspace = true }
+cw-utils        = { workspace = true }
+cw-address-like = { workspace = true }
+cw2             = { workspace = true }
+sg-std          = { workspace = true }
+thiserror       = { workspace = true }
