--- a/contracts/infinity-pair/Cargo.toml
+++ b/contracts/infinity-pair/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "infinity-pool"
-version = { workspace = true }
-edition = { workspace = true }
+name       = "infinity-pair"
+version    = { workspace = true }
+edition    = { workspace = true }
 repository = { workspace = true }
-license = { workspace = true }
+license    = { workspace = true }
 
 exclude = [
   # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
@@ -21,25 +21,27 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-infinity-global = { workspace = true }
+stargaze-fair-burn        = { workspace = true }
+stargaze-royalty-registry = { workspace = true }
+infinity-global           = { workspace = true }
 # infinity-macros = { workspace = true }
 infinity-shared = { workspace = true }
-infinity-index = { workspace = true }
+infinity-index  = { workspace = true }
 # infinity-swap = { workspace = true }
-cosmwasm-std = { workspace = true }
+cosmwasm-std    = { workspace = true }
 cosmwasm-schema = { workspace = true }
 cw-storage-plus = { workspace = true }
 # cosmwasm-storage = { workspace = true }
-cw-utils = { workspace = true }
-cw2 = { workspace = true }
+cw-utils  = { workspace = true }
+cw2       = { workspace = true }
 thiserror = { workspace = true }
 # anyhow = { workspace = true }
 sg1 = { workspace = true }
 # sg2 = { workspace = true }
 # sg721-base = { workspace = true }
-sg721 = { workspace = true }
+sg721  = { workspace = true }
 sg-std = { workspace = true }
 # sg-marketplace = { workspace = true }
 sg-marketplace-common = { workspace = true }
-cw721-base = { workspace = true }
-cw721 = { workspace = true }
+cw721-base            = { workspace = true }
+cw721                 = { workspace = true }
