--- a/contracts/infinity-router/Cargo.toml
+++ b/contracts/infinity-router/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "infinity-router"
-version = { workspace = true }
-edition = { workspace = true }
+name       = "infinity-router"
+version    = { workspace = true }
+edition    = { workspace = true }
 repository = { workspace = true }
-license = { workspace = true }
+license    = { workspace = true }
 
 exclude = [
   # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
@@ -23,25 +23,28 @@ library = []
 [dependencies]
 # infinity-macros = { workspace = true }
 infinity-shared = { workspace = true }
-infinity-index = { workspace = true }
+infinity-index  = { workspace = true }
+infinity-global = { workspace = true }
 # infinity-swap = { workspace = true }
-infinity-pool = { workspace = true }
-cosmwasm-std = { workspace = true }
-cosmwasm-schema = { workspace = true }
-cw-storage-plus = { workspace = true }
-cw-storage-macro = { workspace = true }
+infinity-pair             = { workspace = true }
+cosmwasm-std              = { workspace = true }
+cosmwasm-schema           = { workspace = true }
+cw-storage-plus           = { workspace = true }
+cw-storage-macro          = { workspace = true }
+sg-index-query            = { workspace = true }
+stargaze-royalty-registry = { workspace = true }
 # cosmwasm-storage = { workspace = true }
-cw-utils = { workspace = true }
-cw2 = { workspace = true }
+cw-utils  = { workspace = true }
+cw2       = { workspace = true }
 thiserror = { workspace = true }
 # anyhow = { workspace = true }
 # sg1 = { workspace = true }
 # sg2 = { workspace = true }
 # sg721-base = { workspace = true }
 # sg721 = { workspace = true }
-sg-std = { workspace = true }
-sg-marketplace = { workspace = true }
+sg-std                = { workspace = true }
+sg-marketplace        = { workspace = true }
 sg-marketplace-common = { workspace = true }
-sha2 = { workspace = true }
-cw721-base = { workspace = true }
-cw721 = { workspace = true }
+sha2                  = { workspace = true }
+cw721-base            = { workspace = true }
+cw721                 = { workspace = true }
