--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,52 +1,62 @@
 [workspace]
-members = ["contracts/*",  "packages/*",  "test/*"]
+members = ["contracts/*", "packages/*"]
 
 [workspace.package]
-version = "0.1.0"
-edition = "2021"
-repository = "https://github.com/tasiov/infinity-swap"
+version     = "0.1.0"
+edition     = "2021"
+repository  = "https://github.com/tasiov/infinity-swap"
 description = "A set of contracts and libraries for the Infinity Swap project."
-authors = ["Tasio tasiovictoria@ujulabs.com"]
-license = "BUSL-1.1"
+authors     = ["Tasio tasiovictoria@ujulabs.com"]
+license     = "BUSL-1.1"
 
 [workspace.dependencies]
-infinity-global = { path = "./contracts/infinity-global" }
-infinity-router = { path = "./contracts/infinity-router" }
-infinity-index = { path = "./contracts/infinity-index" }
-infinity-pool = { path = "./contracts/infinity-pool" }
-infinity-shared = { path = "./packages/infinity-shared" }
-# infinity-macros = { path = "./packages/infinity-macros" }
-# infinity-swap = { path = "./contracts/infinity-swap" }
-# infinity-marketplace-adapter = { path = "./contracts/infinity-marketplace-adapter" }
-cosmwasm-std    = { version = "1.2", features = ["staking", "stargate", "ibc3", "cosmwasm_1_1"] }
+infinity-builder = { path = "./contracts/infinity-builder" }
+infinity-factory = { path = "./contracts/infinity-factory" }
+infinity-global  = { path = "./contracts/infinity-global" }
+infinity-index   = { path = "./contracts/infinity-index" }
+infinity-pair    = { path = "./contracts/infinity-pair" }
+infinity-router  = { path = "./contracts/infinity-router" }
+infinity-shared  = { path = "./packages/infinity-shared" }
+
+stargaze-fair-burn        = { version = "1.0.2", features = ["library"] }
+stargaze-royalty-registry = { version = "0.1.0", features = ["library"] }
+sg-marketplace-common     = { git = "https://github.com/public-awesome/marketplace", rev = "02be12b82ceb88188b227cc73d0c2631aaa201c0", package = "sg-marketplace-common" }
+sg-marketplace            = { git = "https://github.com/public-awesome/marketplace", rev = "6aef3689ebf9b7d47805a40111f7d6c9dda8a6b7", package = "sg-marketplace" }
+
+cosmwasm-std = { version = "1.2", features = [
+    "staking",
+    "stargate",
+    "ibc3",
+    "cosmwasm_1_1",
+    "cosmwasm_1_2",
+] }
+
 cosmwasm-schema  = "1.2"
 cosmwasm-storage = "1.2"
-cw-storage-plus = "0.16.0"
-cw-storage-macro      = "0.16.0"
-cw-utils = "0.16.0"
-cw2 = "0.16.0"
-cw721-base = { version = "0.16.0", features = ["library"] }
-cw721 = "0.16.0"
-sg1 = { version = "2.3.0" }
-sg2 = { version = "2.3.0" }
-sg721-base = { version = "2.3.0", features = ["library"] }
-sg721 = { version = "2.3.0", features = ["library"] }
-sg-std = { version = "2.3.0" }
-sg-marketplace = { git = "https://github.com/public-awesome/marketplace", branch = "update-sg-marketplace-common", features = ["library"] }
-sg-marketplace-common = { git = "https://github.com/public-awesome/marketplace", branch = "update-sg-marketplace-common" }
-# sg-marketplace = { path = "../marketplace/contracts/marketplace", features = ["library"] }
-# sg-marketplace-common = { path = "../marketplace/packages/sg-marketplace-common" }
-sha2            = "0.10"
-thiserror = { version = "1.0.31" }
-anyhow = "1.0.51"
+cw-storage-plus  = { version = "1.1.0" }
+cw-storage-macro = "0.16.0"
+cw-utils         = "0.16.0"
+cw2              = "0.16.0"
+cw721-base       = { version = "0.16.0", features = ["library"] }
+cw721            = "0.16.0"
+cw-address-like  = "1.0.4"
+sg1              = { version = "2.3.0" }
+sg2              = { version = "2.3.0" }
+sg721-base       = { version = "2.3.0", features = ["library"] }
+sg721            = { version = "2.3.0", features = ["library"] }
+sg-std           = { version = "2.3.0" }
+sg-index-query   = { version = "0.1.1" }
+
+sha2        = "0.10"
+thiserror   = { version = "1.0.31" }
+anyhow      = "1.0.51"
 proc-macro2 = "1.0"
-quote = "1.0"
-syn = { version = "1.0", features = ["derive"] }
+quote       = "1.0"
+syn         = { version = "1.0", features = ["derive"] }
 
 # dev-dependencies
 itertools       = "0.10.5"
 cw-multi-test   = "0.16.0"
-# sg-multi-test   = "2.3"
 sg-multi-test   = { version = "2.3.0" }
 test-suite      = { version = "2.3.0" }
 base-minter     = { version = "2.3.0" }
@@ -64,14 +74,10 @@ test-context    = "0.1.4"
 once_cell       = "1.13.0"
 rand            = "0.8"
 
-# [profile.release.package.infinity-swap]
-# codegen-units = 1
-# incremental = false
-
 [profile.release]
-rpath = false
-lto = true
-overflow-checks = true
-opt-level = 3
-debug = false
+rpath            = false
+lto              = true
+overflow-checks  = true
+opt-level        = 3
+debug            = false
 debug-assertions = false
