--- a/contracts/infinity-global/Cargo.toml
+++ b/contracts/infinity-global/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       = "infinity-global"
-version    = { workspace = true }
+version    = "0.1.0"
 edition    = { workspace = true }
 repository = { workspace = true }
 license    = { workspace = true }
