--- a/contracts/infinity-pair/Cargo.toml
+++ b/contracts/infinity-pair/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       = "infinity-pair"
-version    = { workspace = true }
+version    = "0.1.0"
 edition    = { workspace = true }
 repository = { workspace = true }
 license    = { workspace = true }
@@ -37,3 +37,4 @@ sg721                     = { workspace = true }
 sg-std                    = { workspace = true }
 cw721-base                = { workspace = true }
 cw721                     = { workspace = true }
+cw-address-like           = { workspace = true }
