--- a/contracts/infinity-router/Cargo.toml
+++ b/contracts/infinity-router/Cargo.toml
@@ -39,3 +39,4 @@ thiserror                 = { workspace = true }
 sha2                      = { workspace = true }
 cw721-base                = { workspace = true }
 cw721                     = { workspace = true }
+cw-address-like           = { workspace = true }
