--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,2 +1,13 @@
-ignore:
-  - "test/.*"
+coverage:
+  precision: 2
+  round: down
+  range: 90...100
+
+  status:
+    project:
+      default:
+        threshold: 6%
+        target: 90%
+    patch:
+      default:
+        enabled: no
