--- a/.cargo/config
+++ b/.cargo/config
@@ -1,6 +1,5 @@
 [alias]
-wasm = "build --release --target wasm32-unknown-unknown"
+wasm = "build --release --lib --target wasm32-unknown-unknown"
 wasm-debug = "build --target wasm32-unknown-unknown"
 unit-test = "test --lib -- --nocapture"
 schema = "run --example schema"
-integration-test = "test --package e2e-tests -- --nocapture --ignored --test-threads 1 -Z unstable-options --report-time"
