--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,6 +8,8 @@ jobs:
     name: E2E tests
     runs-on: ubuntu-latest
     steps:
+      - uses: extractions/setup-just@v1
+
       - name: Checkout sources
         uses: actions/checkout@v3
 
@@ -17,6 +19,9 @@ jobs:
           toolchain: nightly
           targets: wasm32-unknown-unknown
 
+      - name: Download artifacts
+        run: just download-artifacts
+
       - name: Rust Dependencies Cache
         uses: actions/cache@v3
         with:
@@ -24,17 +29,18 @@ jobs:
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
-            target/
-            artifacts/
+            artifacts
           key: ${{ runner.os }}-cargo-with-artifacts-${{ hashFiles('**/Cargo.lock') }}
-
-      - uses: extractions/setup-just@v1
-
-      - name: Download artifacts
-        run: just download-artifacts
 
       - name: Optimize contracts
         run: just optimize
+
+      - name: Optimized Contracts Cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            target/
+          key: ${{ runner.os }}-cargo-with-artifacts-${{ hashFiles('contracts/**') }}
 
       - name: Run local stargaze chain
         run: just deploy-local
