Add query for retrieving pair addresses by owner

--- a/contracts/infinity-factory/Cargo.toml
+++ b/contracts/infinity-factory/Cargo.toml
@@ -38,3 +38,4 @@ cw2              = { workspace = true }
 thiserror        = { workspace = true }
 sg-std           = { workspace = true }
 sha2             = { workspace = true }
+sg-index-query   = { workspace = true }
