--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,44 +24,49 @@ infinity-pair = { path = "./contracts/infinity-pair", features = ["library"] }
 infinity-router = { path = "./contracts/infinity-router", features = [
     "library",
 ] }
-infinity-shared = { path = "./packages/infinity-shared", features = [
-    "library",
-] }
+infinity-shared = { path = "./packages/infinity-shared" }
 
 stargaze-fair-burn        = { version = "1.0.4", features = ["library"] }
 stargaze-royalty-registry = { version = "0.3.0", features = ["library"] }
-sg-marketplace-common     = { git = "https://github.com/public-awesome/marketplace", rev = "02be12b82ceb88188b227cc73d0c2631aaa201c0", package = "sg-marketplace-common" }
-sg-marketplace            = { git = "https://github.com/public-awesome/marketplace", rev = "6aef3689ebf9b7d47805a40111f7d6c9dda8a6b7", package = "sg-marketplace" }
+sg721-base                = { version = "2.4.0", features = ["library"] }
+sg721                     = { version = "2.4.0", features = ["library"] }
 
-cosmwasm-std = { version = "1.2", features = [
+sg-marketplace-common = { git = "https://github.com/public-awesome/marketplace", rev = "02be12b82ceb88188b227cc73d0c2631aaa201c0", package = "sg-marketplace-common" }
+sg-marketplace = { git = "https://github.com/public-awesome/marketplace", rev = "6aef3689ebf9b7d47805a40111f7d6c9dda8a6b7", package = "sg-marketplace", features = [
+    "library",
+] }
+
+cosmwasm-std = { version = "1.3.1", features = [
     "staking",
     "stargate",
     "ibc3",
     "cosmwasm_1_1",
     "cosmwasm_1_2",
+    "cosmwasm_1_3",
 ] }
 
-cosmwasm-schema  = "1.2"
-cosmwasm-storage = "1.2"
-cw-storage-plus  = { version = "1.1.0" }
-cw-storage-macro = "0.16.0"
+cosmwasm-schema  = "1.3.1"
+cosmwasm-storage = "1.3.1"
+cw-storage-macro = "1.1.0"
+cw-storage-plus  = "1.1.0"
+cw-controllers   = "1.1.0"
+cw2              = "1.1.0"
+cw721            = "0.18.0"
+cw721-base       = "0.18.0"
 cw-utils         = "0.16.0"
-cw2              = "0.16.0"
-cw721-base       = { version = "0.16.0", features = ["library"] }
-cw721            = "0.16.0"
 cw-address-like  = "1.0.4"
-sg1              = { version = "2.3.0" }
-sg2              = { version = "2.3.0" }
-sg721-base       = { version = "2.3.0", features = ["library"] }
-sg721            = { version = "2.3.0", features = ["library"] }
-sg-std           = { version = "2.3.0" }
-sg-index-query   = { version = "0.1.1" }
-sha2             = "0.10"
-thiserror        = { version = "1.0.31" }
-anyhow           = "1.0.51"
-proc-macro2      = "1.0"
-quote            = "1.0"
-syn              = { version = "1.0", features = ["derive"] }
+
+sg1            = "2.3.0"
+sg2            = "2.3.0"
+sg-std         = "2.3.0"
+sg-index-query = "0.1.1"
+
+sha2        = "0.10"
+thiserror   = "1.0.31"
+anyhow      = "1.0.51"
+proc-macro2 = "1.0"
+quote       = "1.0"
+syn         = { version = "1.0", features = ["derive"] }
 
 # dev-dependencies
 itertools       = "0.10.5"
