--- a/typescript/packages/infinity-types/package.json
+++ b/typescript/packages/infinity-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stargazezone/infinity-types",
-  "version": "0.3.0",
+  "version": "0.5.0",
   "description": "The official types package for the Infinity Swap protocol",
   "author": "Tasio Victoria",
   "homepage": "https://stargaze.zone/",
@@ -8,8 +8,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc -p src/tsconfig.json",
-    "codegen": "ts-node codegen.ts",
-    "prepublishOnly": "yarn install && yarn codegen && yarn build"
+    "codegen": "ts-node codegen.ts"
   },
   "files": [
     "lib"
